--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <P> Hola </P>
-    <input type = "text">
+    <input type="text">
+    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, incidunt nostrum, perferendis architecto harum
+        eligendi quibusdam voluptate totam laboriosam, inventore neque magni eveniet. Placeat officiis ratione velit
+        sapiente facilis minima.</p>
 </body>
+
 </html>
